--- a/.gitignore
+++ b/.gitignore
@@ -73,6 +73,7 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
+.appStore_build/
 
 # Code Injection
 #
@@ -90,3 +91,8 @@ iOSInjectionProject/
 #
 # This is your Google Service Account file. This service account is used to authorize client devices for access to GCP (Google cloud Platform) and/or Firebase. It is bad practice to include this file in your git repositories. You should instead generate this file during your CI/CD process or store it seperately from this Swift project. 
 GoogleService-Info.plist
+
+# .vscode
+#
+# This is the preferences file for VisualStudio Code. These are personal to each developer.
+.vscode
