--- a/docs/_data/navigation.yml
+++ b/docs/_data/navigation.yml
@@ -3,7 +3,7 @@
 - name: About
   link: /about.html
 - name: Privacy Policy
-  link: /privacy_policy.html
+  link: HueBoo/privacy_policy.html
 - name: Blog
   link: /blog.html
 - name: Contributors
